--- a/image-generation/overview.mdx
+++ b/image-generation/overview.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Overview"
-deescription: 'Collection of Variety of Image generation, Controlnets and Realtime APIs.'
+description: 'Image generation APIs including Stable Diffusion, FLUX, ControlNet, and community models.'
 ---
 
 ### Categories
