--- a/index.mdx
+++ b/index.mdx
@@ -73,7 +73,7 @@ Explore our comprehensive suite of AI APIs designed for next-generation applicat
     icon="comment"
     href="/uncensored-chat-api/overview"
   >
-    Enagage into conversation without censorship.
+    Engage in conversation without censorship.
   </Card>
   <Card
     title="Deepfake"
